# ActivityBot

./: README.md  modelrobot.sh  viewrobot.sh
Propeller/: ROS Interface for ActivityBot.c
Propeller/cmm/: ROS Interface for ActivityBot.binary  ROS Interface for ActivityBot.elf
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/lib/pkgconfig/: activitybot_bringup.pc  activitybot_description.pc
devel/share/activitybot_bringup/cmake/: activitybot_bringupConfig.cmake
devel/share/activitybot_description/cmake/: activitybot_descriptionConfig.cmake
src/activitybot_bringup/: CMakeLists.txt  package.xml
src/activitybot_bringup/launch/: gmapping_demo.launch  minimal.launch  mobile_base_with_ekf.launch.xml  model_robot.launch  view_navigation.launch  view_robot.launch
src/activitybot_bringup/param/: encoders.yaml
src/activitybot_bringup/scripts/: propellerbot_node.py
src/activitybot_description/: CMakeLists.txt  package.xml
src/activitybot_description/urdf/: activitybot.urdf.xacro  arlo.urdf.xacro  circles.urdf.xacro  common.urdf.xacro  create.urdf.xacro  turtlebot_properties.urdf.xacro
